testsuite/tests/gadt/T27423b.stderr
T27423b.hs:8:12: error: [GHC-89246]
    • Record syntax is illegal here: {fld :: a}
    • In the definition of data constructor ‘MkT1’

T27423b.hs:11:12: error: [GHC-71492]
    • GADT constructor type signature cannot contain nested ‘forall’s or contexts
    • In the definition of data constructor ‘MkT2’

T27423b.hs:11:22: error: [GHC-89246]
    • Record syntax is illegal here: {fld :: a}
    • In the definition of data constructor ‘MkT2’

T27423b.hs:16:26: error: [GHC-76037]
    Not in scope: type variable ‘b’

